--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -61,7 +61,7 @@ header a {
 
 /* This styling is to add a line under each page so anyone using the webiste can see where they are in the website */
 #locate {
-  border-bottom: 1px solid #a4969b;
+  border-bottom: 1px solid #ffffff;
 }
 
 /* Navbar styles with dropdown toggle */
@@ -198,30 +198,6 @@ main {
   color: inherit;
 }
 
-#section-qualification {
-  font-size: 8px;
-  font-style: italic;
-  letter-spacing: 1px;
-  padding: 0.4rem;
-  margin: 10px;
-  border: 1px outset whitesmoke;
-  border-radius: 20px;
-  box-shadow: -5px 0px 10px #a4969b;
-
-}
-
-#section-qualification h2 {
-  line-height: 1rem;
-  font-weight: 800;
-  padding: 2px;
-  text-decoration: underline;
-  text-align: center;
-}
-
-#section-qualification p {
-  line-height: 10px;
-}
-
 #section-whatweoffer {
   font-family: "Bungee Outline", sans-serif;
   font-size: 1.3rem;
@@ -244,10 +220,18 @@ main {
   margin: 8px;
 }
 
+
+#img-aspect {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* creates columns that are a minimum of 250px wide and take up equal fractional space and Adjusts based on your layout */
+  gap: 10px; /* Adjust the gap between images */
+}
+
 #section-offer img {
-  max-height: auto;
   width: 100%;
-  border-radius: 15px;
+  height: auto;
+  object-fit: cover; /* Maintains the aspect ratio and covers the entire space */
+  aspect-ratio: 16 / 9; /* Set the desired aspect ratio (width / height) */
 }
 
 #section-offer h3 {
@@ -255,6 +239,8 @@ main {
   padding: 5px;
   font-weight: 800;
   font-size: 1rem;
+  display: grid;
+  place-items: center;
 }
 
 #section-offer p {
@@ -352,7 +338,7 @@ summary ~ p {
   width: 7rem;
   margin-top: 5px;
   text-align: center;
-  background-color: #454343;
+  background-color: #fff;
   border-radius: 10px;
 }
 
@@ -384,13 +370,17 @@ footer {
   bottom: 100;
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   padding: 0 1rem;
 }
 
-#thefooter {
-  
+#ankara  a{
+  color: #ffffff;
+}
+
+#ankara {
+  color: #ffffff;
 }
 
 
@@ -400,7 +390,7 @@ footer {
 }
 
 #social-media i {
-  padding: 10px;
+  padding: 15px 25px;
   font-size: 20px;
 }
 
@@ -473,10 +463,14 @@ footer {
     font-size: 18px;
   }
 
+  #social-media i {
+    font: 25px;
+    padding: 15px 30px;
+  }
+
 }
 
 @media screen and (min-width: 425px) {
-  
   
   #hero-image {
     height: 690px;
@@ -513,17 +507,14 @@ footer {
     padding: 10px;
   }
 
-  #section-qualification {
-    padding: 10px;
-  }
-
   #section-grey button {
     padding: 10px 25px;
   }
 
   #contact {
-    margin-top: 20px;
+    margin-top: -15px;
   }
+
   #contact-form {
     margin-right: 2.2vw;
   }
@@ -540,6 +531,16 @@ footer {
   #contact-button button {
     font-size: 20px;
   }
+  footer {
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  #social-media i{
+   padding: 20px 35px ;
+   font-size: 25px;
+  }
+  
 }
 
 /* Media query: tablets and larger (768 and up)*/
@@ -548,14 +549,20 @@ footer {
   header {
     font-size: 1.3rem;
   }
+
+  header h1{
+  padding: 5px 0px 0px 5px;
+  }
   
-  #contact-form {
-    margin-right: -3vw;
+  #contact {
+    margin-top: 1px;
   }
 
+  #contact-form {
+    margin-right: -5vw;
+  }
   #contact-form input {
-    font-size: 12px;
-    padding: 6px;
+    font-size: 16px;
     width: 9rem;
     text-align: center;
     left: 40px;
@@ -564,7 +571,7 @@ footer {
 
   #contact-form button {
     padding: 6px;
-    font-size: 12px;
+    font-size: 16px;
   }
 
   #contact-address h2 {
@@ -615,12 +622,6 @@ footer {
     font-weight: 900;
     font-size: 1.6rem;
     padding-bottom: 20px;
-  }
-
-  #section-qualification h2 {
-    font-weight: 900;
-    padding-bottom: 15px;
-    font-size: 1.6rem;
   }
 
   #section-grey p {
@@ -679,7 +680,7 @@ footer {
   #section-grey {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* Two columns by default */
-    gap: 10px; /* Gap between cards */
+    gap: 15px; /* Gap between cards */
   }
 
   #faqs-control {
@@ -704,18 +705,22 @@ footer {
     height: 60vh;
   }
 
-
   footer {
     font-size: 1.9rem;
+  }
+
+  #social-media i{
+    padding: 25px 55px ;
+    font-size: 35px;
   }
 }
 
 /* Media query: laptops and larger (992 and up)*/
 @media screen and (min-width: 992px) {
   header {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
-  
+
   main {
     margin-top: 3.2rem;
   }
@@ -747,8 +752,11 @@ footer {
   }
 
   #navmenu a:hover {
-    border-bottom: 1px solid #a4969b;
+    border-bottom: 2px solid #ffffff;
+    padding-top: 10px;
+    color: #7c7878;
   }
+
   #hero-image {
     height: 1100px;
     width: auto;
@@ -756,6 +764,10 @@ footer {
 
   #hero-section {
     margin-top: 35rem;
+  }
+
+  #heading:hover {
+    box-shadow: 2px 2px 15px 5px #7c7878;
   }
 
   #hero-section h1 {
@@ -766,9 +778,29 @@ footer {
     font-size: 1.4rem;
   }
 
+  #section-offer img:hover {
+
+  }
+
   summary:hover {
     border-bottom: 1px solid #000;
   }
+
+  #section-grey button:hover {
+    background-color: #7c7878;
+    color: white;
+  }
+
+  #contact-form button:hover {
+    background-color: #7c7878;
+    color: white;
+  }
+
+  #contact-button button:hover {
+    background-color: #7c7878;
+    color: white;
+  }
+
 }
 
 @media screen and (min-width: 1024px) {
@@ -777,9 +809,9 @@ footer {
   }
 
   header {
-    margin-bottom: 20px;
-    font-size: 1.6rem;
-    padding: 7px;
+    margin-bottom: 10px;
+    font-size: 1.7rem;
+    padding: 10px;
   }
 
   #contact-form {
@@ -829,12 +861,6 @@ footer {
     font-weight: 900;
     font-size: 2rem;
     padding-bottom: 20px;
-  }
-
-  #section-qualification h2 {
-    font-weight: 900;
-    padding-bottom: 20px;
-    font-size: 1.6rem;
   }
 
   #section-grey p {
@@ -898,12 +924,18 @@ footer {
   footer {
     font-size: 2.3rem;
   }
+
+  #social-media i{
+    padding: 30px 70px;
+    font-size: 35px;
+  }
+
 }
 
 /* Media query: Desktops and larger ( 1440 and up)*/
 @media screen and (min-width: 1440px) {
   main {
-    margin-top: 7.5rem;
+    margin-top: 7rem;
   }
 
   #contact {
@@ -919,14 +951,14 @@ footer {
     font-size: 1.2rem;
     width: 10rem;
     left: 40px;
-    margin-right: 10px;
+    margin-right: 5px;
     padding-left: 1px;
   }
 
   #contact-form button {
-    padding: 1px;
     font-size: 1.3rem;
-    margin-left: 5px;
+  
+    width: auto;
   }
 
   #contact-address h2 {
@@ -938,20 +970,20 @@ footer {
   }
 
   header {
-    font-size: 2.2rem;
+    font-size: 1.7rem;
   }
 
   #hero-image {
-    height: 1600px;
-    width: 100%;
+    height: 750px;
+    width: auto;
   }
 
   #hero-section {
-    margin-top: 60rem;
+    margin-top: 21rem;
   }
 
   #hero-section p {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 600;
     text-align: justify;
   }
@@ -963,28 +995,31 @@ footer {
   }
 
   #section-grey h2 {
-    font-size: 4rem;
+    font-size: 2rem;
     line-height: 50px;
-    padding-bottom: 25px;
+    padding-bottom: 5px;
   }
 
   #section-grey p{
-    font-size: 2rem;
-    line-height: 35px;
-  }
-
- #section-qualification h2{
-    font-size: 3.5rem;
+    font-size: 1rem;
+    line-height: 20px;
+    padding: 5px;
   }
 
   #section-grey button {
-    font-size: 50px;
-    padding: 10px 25px;
-    margin: 250px 100px;
+    font-size: 35px;
+    padding: 5px 20px;
+    margin: 100px 50px;
   }
 
   #video {
     margin: 30px 10px;
   }
+
+  #social-media i{
+    padding: 25px 150px ;
+    font-size: 30px;
+  }
+
 }
 
