I added dropdown list and text area so user can submit there enquiry and i made it responsive and added box-shadoqw and hover to make it more appealing to the user i also overflow to hidden in the main-contact id since there was a horizontal scrolling option to the right i

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -116,6 +116,7 @@ main {
   background-color: #454343;
   /* Added flex shorthand to take up any surplus space to push footer down */
   flex: 1 0 auto;
+  overflow: hidden;
 }
 
 /*hero section*/
@@ -311,11 +312,15 @@ summary ~ p {
   flex: 1;
 }
 
-#contact-form input {
-  width: 7rem;
+#contact-form input, select {
   margin-bottom: 2px;
-  padding: 2px;
+  padding: 5px;
 }
+
+textarea {
+  margin-top:5px;
+}
+
 /* Video */
 #video {
   display: flex;
@@ -346,6 +351,7 @@ summary ~ p {
 input::placeholder {
   color: #000;
 }
+
 
 #contact-address p {
   font-size: 12px;
@@ -383,7 +389,6 @@ footer {
 #ankara {
   color: #ffffff;
 }
-
 
 #social-media {
   list-style-type: none;
@@ -453,7 +458,7 @@ footer {
   }
 
   #contact-form {
-    margin-right: -60px;
+    margin-right: -20px;
   }
 
   #section-grey {
@@ -522,7 +527,7 @@ footer {
   }
 
   #contact-form {
-    margin-right: 2.2vw;
+    margin-right: -15vw;
   }
 
   #contact-form input {
@@ -537,6 +542,7 @@ footer {
   #contact-button button {
     font-size: 20px;
   }
+
   footer {
     justify-content: space-evenly;
     align-items: center;
@@ -561,13 +567,13 @@ footer {
   }
   
   #contact {
-    margin-top: 1px;
+    margin-top: 20px;
   }
 
   #contact-form {
-    margin-right: -5vw;
+    margin-right: -50vw;
   }
-  #contact-form input {
+  #contact-form input~textarea {
     font-size: 16px;
     width: 9rem;
     text-align: center;
@@ -663,6 +669,7 @@ footer {
     border-radius: 15px;
   }
 
+
   #section-offer h3 {
     text-decoration: underline;
     padding: 5px;
@@ -728,16 +735,20 @@ footer {
   }
 
   #contact-form {
-    margin-right: -15vw;
+    margin-right: -60vw;
+    display: grid;
   }
 
-  #contact-form input {
+  #contact-form input{
     font-size: 0.9rem;
-    padding: 10px;
+    padding: 10px 0px;
     width: 9rem;
     text-align: center;
     left: 40px;
-    margin-top: 10px;
+  }
+  textarea {
+    padding: 0px 3px;
+    width:max-content;
   }
 
   #contact-form button {
@@ -746,11 +757,11 @@ footer {
   }
 
   #contact-address h2 {
-    font-size: 3rem;
+    font-size: 3.3rem;
   }
 
   #contact-address p {
-    font-size: 1.3rem;
+    font-size: 1.5em;
   }
 
   #section-about:hover {
@@ -781,16 +792,16 @@ footer {
     margin-top: 35rem;
   }
 
-  #heading:hover {
-    box-shadow: 5px 5px 25px #7c7878;
-  }
-
   #hero-section h1 {
     font-weight: 900;
     font-size: 2rem;
   }
   #hero-section p {
     font-size: 1.4rem;
+  }
+
+  #heading:hover {
+    box-shadow: 5px 5px 25px #7c7878;
   }
 
   #section-offer img:hover {
@@ -809,12 +820,11 @@ footer {
     box-shadow: 5px 5px 20px #7c7878;
   }
 
-  /* hover state */
+ 
   input:hover::placeholder {
     color: #fff; /* Change placeholder color on input focus */
   }
   
-
   #faqs:hover {
     box-shadow: 10px 5px 20px 15px #7c7878 ;
     background-color: #7c7878;
@@ -826,6 +836,20 @@ footer {
     background-color: #7c7878;
     color: white;
     box-shadow: 5px 5px 20px #7c7878;
+    border-radius: 5px;
+  }
+
+  
+  select:hover {
+    background-color: #7c7878;
+    color: white;
+    box-shadow: 5px 5px 20px #7c7878;
+    border-radius: 5px;
+  }
+  
+  textarea:hover {
+    box-shadow: 5px 5px 50px 20px #7c7878;
+    border-radius: 5px;
   }
 
   #contact-button button:hover {
@@ -865,8 +889,13 @@ footer {
     padding: 6px;
     width: 9.5rem;
     left: 40px;
-    margin-top: 10px;
     margin-left: 1px;
+  }
+  select {
+    padding: 1px;
+    font-size: 1rem;
+    width: 9.5rem;
+    text-align: center;
   }
 
   #contact-form button {
@@ -986,7 +1015,7 @@ footer {
   }
 
   #contact-form {
-    margin-right: -25vw;
+    margin-right: -70vw;
   }
 
   #contact-form input {
@@ -998,8 +1027,15 @@ footer {
   }
 
   #contact-form button {
+    padding: 5px;
     font-size: 1.3rem;
     width: auto;
+  }
+
+
+  select {
+    font-size: 1.2rem;
+    width: 11rem;
   }
 
   #contact-address h2 {
