--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -123,7 +123,7 @@ main {
   width: auto;
   height: 640px;
   overflow: scroll;
-  background: url("/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/hero image main.jpg")
+  background: url("/assests/images/hero image main.jpg")
     no-repeat center center / cover;
   text-align: left;
   position: relative;
