--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -14,7 +14,11 @@ h1 {
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
+  color: transparent;
+  background: linear-gradient(#7c7878, white, #2e2d2d, #454343);
+  -webkit-background-clip: text;
 }
+
 /* General styles*/
 body {
   min-height: 100vh; /*using min-height will allow it to stretch larger than the height of the screen when thiers enough content on the page when the user needs to scroll*/
@@ -123,8 +127,8 @@ main {
   width: auto;
   height: 640px;
   overflow: scroll;
-  background: url("/assests/images/hero image main.jpg")
-    no-repeat center center / cover;
+  background: url("/assests/images/hero image main.jpg") no-repeat center center /
+    cover;
   text-align: left;
   position: relative;
 }
@@ -189,7 +193,7 @@ main {
   border-radius: 20px;
   background-color: #fff;
   border: 1px solid rgba(188, 183, 183, 0.7);
-  padding: 2px 20px ;
+  padding: 2px 20px;
   margin: 20px 100px 20px 100px;
   text-align: justify;
 }
@@ -222,10 +226,12 @@ main {
   margin: 8px;
 }
 
-
 #img-aspect {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* creates columns that are a minimum of 250px wide and take up equal fractional space and Adjusts based on your layout */
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(250px, 1fr)
+  ); /* creates columns that are a minimum of 250px wide and take up equal fractional space and Adjusts based on your layout */
   gap: 10px; /* Adjust the gap between images */
 }
 
@@ -298,7 +304,6 @@ summary ~ p {
   color: inherit;
 }
 
-
 #contact {
   margin-top: 2vh;
   display: flex;
@@ -311,13 +316,14 @@ summary ~ p {
   flex: 1;
 }
 
-#contact-form input, select {
+#contact-form input,
+select {
   margin-bottom: 2px;
   padding: 5px;
 }
 
 textarea {
-  margin-top:5px;
+  margin-top: 5px;
 }
 
 /* Video */
@@ -327,9 +333,8 @@ textarea {
   align-items: center;
 }
 
-
 #video video {
-  width: 90%; 
+  width: 90%;
   height: auto;
   margin: 20px 0;
   box-shadow: 1px 1px 50px #7c7878;
@@ -350,7 +355,6 @@ textarea {
 input::placeholder {
   color: #000;
 }
-
 
 #contact-address p {
   font-size: 12px;
@@ -381,7 +385,7 @@ footer {
   padding: 0 1rem;
 }
 
-#ankara  a{
+#ankara a {
   color: #ffffff;
 }
 
@@ -407,7 +411,7 @@ footer {
   text-decoration: underline;
 }
 
-@media screen and (max-width: 195px) {
+@media screen and (max-width: 277px) {
   footer {
     min-width: 195px;
     position: fixed;
@@ -461,10 +465,10 @@ footer {
   }
 
   #section-grey {
-    margin:5px;
+    margin: 5px;
   }
 
-  #section-grey button { 
+  #section-grey button {
     padding: 5px 25px;
     text-align: center;
   }
@@ -477,11 +481,9 @@ footer {
     font: 25px;
     padding: 15px 30px;
   }
-
 }
 /* This a breakpiont for larger phones (425 and up) */
 @media screen and (min-width: 425px) {
-  
   #hero-image {
     height: 690px;
     width: auto;
@@ -537,7 +539,7 @@ footer {
   #contact-form button {
     font-size: 12px;
   }
-  
+
   #contact-button button {
     font-size: 20px;
   }
@@ -547,24 +549,22 @@ footer {
     align-items: center;
   }
 
-  #social-media i{
-   padding: 20px 35px ;
-   font-size: 25px;
+  #social-media i {
+    padding: 20px 35px;
+    font-size: 25px;
   }
-  
 }
 
 /* Media query: tablets and larger (768 and up)*/
 @media screen and (min-width: 768px) {
-  
   header {
     font-size: 1.3rem;
   }
 
-  header h1{
-  padding: 5px 0px 0px 5px;
+  header h1 {
+    padding: 5px 0px 0px 5px;
   }
-  
+
   #contact {
     margin-top: 20px;
   }
@@ -572,7 +572,7 @@ footer {
   #contact-form {
     margin-right: -50vw;
   }
-  #contact-form input~textarea {
+  #contact-form input ~ textarea {
     font-size: 16px;
     width: 9rem;
     text-align: center;
@@ -592,7 +592,7 @@ footer {
   #contact-address p {
     font-size: 1.3rem;
   }
-  
+
   nav {
     display: block;
     position: relative;
@@ -668,7 +668,6 @@ footer {
     border-radius: 15px;
   }
 
-
   #section-offer h3 {
     text-decoration: underline;
     padding: 5px;
@@ -684,11 +683,11 @@ footer {
 
   #msection-offer {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); 
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px; /* Gap between card formats */
     margin-top: 15px;
   }
-  
+
   #section-grey {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* Two columns by default */
@@ -717,8 +716,8 @@ footer {
     font-size: 1.9rem;
   }
 
-  #social-media i{
-    padding: 25px 55px ;
+  #social-media i {
+    padding: 25px 55px;
     font-size: 35px;
   }
 }
@@ -738,16 +737,16 @@ footer {
     display: grid;
   }
 
-  #contact-form input{
+  #contact-form input {
     font-size: 0.9rem;
     padding: 10px 0px;
     width: 9rem;
     text-align: center;
     left: 40px;
   }
+  
   textarea {
     padding: 0px 3px;
-    width:max-content;
   }
 
   #contact-form button {
@@ -795,12 +794,16 @@ footer {
     font-weight: 900;
     font-size: 2rem;
   }
+
   #hero-section p {
     font-size: 1.4rem;
   }
 
   #heading:hover {
-    box-shadow: 5px 5px 25px #7c7878;
+    box-shadow: 1px 1px 20px 2px #7c7878;
+    opacity: 0.7;
+    border-radius: 10px;
+    color: #a2a2a2;
   }
 
   #section-offer img:hover {
@@ -819,13 +822,12 @@ footer {
     box-shadow: 5px 5px 20px #7c7878;
   }
 
- 
   input:hover::placeholder {
     color: #fff; /* Change placeholder color on input focus */
   }
-  
+
   #faqs:hover {
-    box-shadow: 10px 5px 20px 15px #7c7878 ;
+    box-shadow: 10px 5px 20px 15px #7c7878;
     background-color: #7c7878;
     color: #fff;
     transform: scale(1.02);
@@ -838,14 +840,13 @@ footer {
     border-radius: 5px;
   }
 
-  
   select:hover {
     background-color: #7c7878;
     color: white;
     box-shadow: 5px 5px 20px #7c7878;
     border-radius: 5px;
   }
-  
+
   textarea:hover {
     box-shadow: 5px 5px 50px 20px #7c7878;
     border-radius: 5px;
@@ -861,7 +862,7 @@ footer {
     box-shadow: 10px 10px 50px #fff;
   }
 
-  #social-media i:hover{
+  #social-media i:hover {
     color: #fff;
     box-shadow: 1px 1px 25px #7c7878;
     border-radius: 25px;
@@ -995,11 +996,10 @@ footer {
     font-size: 2.3rem;
   }
 
-  #social-media i{
+  #social-media i {
     padding: 30px 70px;
     font-size: 35px;
   }
-
 }
 
 /* Media query: Desktops and larger ( 1440 and up)*/
@@ -1030,7 +1030,6 @@ footer {
     font-size: 1.3rem;
     width: auto;
   }
-
 
   select {
     font-size: 1.2rem;
@@ -1076,7 +1075,7 @@ footer {
     padding-bottom: 5px;
   }
 
-  #section-grey p{
+  #section-grey p {
     font-size: 1rem;
     line-height: 20px;
     padding: 5px;
@@ -1096,8 +1095,8 @@ footer {
     margin-top: -30px;
   }
 
-  #social-media i{
-    padding: 25px 150px ;
+  #social-media i {
+    padding: 25px 150px;
     font-size: 30px;
   }
 }
